@@ -2,9 +2,9 @@
 	xmlns="http://maven.apache.org/POM/4.0.0"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <groupId>io.swagger</groupId>
+        <groupId>io.swagger.core.v3</groupId>
         <artifactId>swagger-project</artifactId>
-        <version>1.5.15</version>
+        <version>2.0.3-SNAPSHOT</version>
         <relativePath>../..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -14,14 +14,6 @@
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
         <defaultGoal>install</defaultGoal>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <excludes>
-                    <exclude>logback.xml</exclude>
-                </excludes>
-            </resource>
-        </resources>
         <testResources>
             <testResource>
                 <directory>src/test/resources</directory>
@@ -36,13 +28,28 @@
                 <configuration>
                     <instructions>
                         <Export-Package>
-                            io.swagger.models.auth,
-                            io.swagger.models.parameters,
-                            io.swagger.models.properties,
-                            io.swagger.models.refs,
-                            io.swagger.models
+                            io.swagger.v3.oas.models,
+                            io.swagger.v3.oas.models.callbacks,
+                            io.swagger.v3.oas.models.examples,
+                            io.swagger.v3.oas.models.headers,
+                            io.swagger.v3.oas.models.info,
+                            io.swagger.v3.oas.models.links,
+                            io.swagger.v3.oas.models.media,
+                            io.swagger.v3.oas.models.parameters,
+                            io.swagger.v3.oas.models.responses,
+                            io.swagger.v3.oas.models.security,
+                            io.swagger.v3.oas.models.servers,
+                            io.swagger.v3.oas.models.tags
                         </Export-Package>
                     </instructions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.21.0</version>
+                <configuration>
+                    <argLine>-Djdk.attach.allowAttachSelf</argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -50,19 +57,13 @@
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>${jackson-version}</version>
-            <scope>compile</scope>
+            <artifactId>jackson-core</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>${project.parent.version}</version>
-            <scope>compile</scope>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
@@ -70,61 +71,23 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.openpojo</groupId>
-            <artifactId>openpojo</artifactId>
-            <version>0.8.0</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-module-testng</artifactId>
-            <version>${powermock.version}</version>
+            <groupId>org.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>${jmockit-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito</artifactId>
-            <version>${powermock.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.hamcrest</groupId>
-                    <artifactId>hamcrest-core</artifactId>
-                </exclusion>
-            </exclusions>
-            <scope>test</scope>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>${mockito-version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>asm</groupId>
-            <artifactId>asm</artifactId>
-            <version>3.3.1</version>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
+
+
     <properties>
-        <!-- TODO increase coverage -->
         <validation-api-version>1.1.0.Final</validation-api-version>
         <coverage.complexity.minimum>0.07</coverage.complexity.minimum>
         <coverage.line.minimum>0.0</coverage.line.minimum>
-        <!-- Setting this to a really high number since this module has almost no coverage -->
-        <coverage.missed.classes>41</coverage.missed.classes>
-        <powermock.version>1.6.4</powermock.version>
-        <mockito-version>1.10.19</mockito-version>
+        <jmockit-version>1.39</jmockit-version>
+        <mockito-version>2.16.0</mockito-version>
     </properties>
 </project>
